purificationutil